[package]
name = "sample-guard"
version = "0.1.0"
edition = "2021"
authors = ["Your Name"]
description = "RFID-based sample integrity tracking system for medical devices"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/sample-guard"

[dependencies]
# Cryptography for secure RFID data
aes = "0.8"
cbc = "0.1"
sha2 = "0.10"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
log = "0.4"
env_logger = "0.11"

# Testing
mockall = "0.12"

# Database
rusqlite = { version = "0.31", features = ["bundled", "backup"] }
hex = "0.4"

# Async runtime (for future use)
tokio = { version = "1.0", features = ["full"], optional = true }

[dev-dependencies]
criterion = "0.5"
tempfile = "3.8"

[[bench]]
name = "rfid_encryption_bench"
harness = false

